feat: introduce storm lifecycle phases and cyclone snapshot management, enhance weather state resolution